# subprocess-inject-env

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: nightly.yml  presubmit.yml  publish.yml
example/shell/: Cargo.toml
example/shell/src/: main.rs
src/: env_shim.c  lib.rs
