[package]
name = "subprocess-inject-env"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/shell-pool/subprocess-inject-env"
authors = ["Ethan Pailes <pailes@google.com>"]
readme = "README.md"
description = '''
A crate for dynamically injecting environment variables into child
processes.
'''
license = "Apache-2.0"
keywords = ["subprocess", "environment", "env"]

[dependencies]
tempfile = "3" # tmp .so file and control socket
byteorder = "1" # endianness
rand = { version = "0.8", features = ["std_rng"] }

# pid poking
[dependencies.nix]
version = "0.29"
features = ["process"]

# compiler resolution
[build-dependencies]
which = "6"
